Update image height from auto to 100% for spotlight.style.1 to fix image cropping issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4905,10 +4905,10 @@ input, select, textarea {
 		}
 
 			.spotlight.style1 .image img {
-				-moz-object-fit: cover;
-				-webkit-object-fit: cover;
-				-ms-object-fit: cover;
-				object-fit: cover;
+				-moz-object-fit: contain;
+				-webkit-object-fit: contain;
+				-ms-object-fit: contain;
+				object-fit: contain;
 				-moz-object-position: center;
 				-webkit-object-position: center;
 				-ms-object-position: center;
